<resources>
    <string name="app_name">Insurco</string>


    <string name="Skip">Skip</string>


    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Turki">Urdu</string>
    <string name="Log_in">Log in</string>
    <string name="Phone_number">Phone number</string>
    <string name="Password">Password</string>
    <string name="Forget_password">Forget password ?</string>
    <string name="Register">Register</string>
    <string name="Or">Or</string>
    <string name="Facebook">Login by Facebook</string>
    <string name="google">Login by google</string>
    <string name="You_don_have_accoun">You don’t have account</string>
    <string name="Verify_your_phone_number">Verify your phone number</string>
    <string name="Enter_your_OTP_code_here">Enter your OTP code here.</string>
    <string name="receivecode">If you didn’t receive any code</string>
    <string name="Resend">Resend</string>
    <string name="You_have_an_account">You have an account?</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Accept_the">Accept the </string>
    <string name="terms_cond">Terms &amp; Conditions</string>
    <string name="FAQS">FAQS</string>
    <string name="Your_Message">Your Message</string>
    <string name="Attach_File">Attach File</string>
    <string name="Subject">Subject</string>
    <string name="ContactUs">ContactUs</string>
    <string name="Submit">Submit</string>
    <string name="Order_comparison">Order comparison</string>
    <string name="Company_selection">Company selection</string>
    <string name="Contact_us_v">Contact us</string>
    <string name="Follow_Us">Follow Us</string>
    <string name="Inquiry_Form">Inquiry Form</string>
    <string name="Attach_files">Attach files</string>
    <string name="NextBtn">Next</string>
    <string name="OwnerShip">OwnerShip</string>
    <string name="examination">Vehicle inspection today, customs vehicle registration, or possession certificate(optinal)</string>

    <string name="examination2">Vehicle inspection today, customs vehicle registration, or possession certificate</string>


    <string name="vehicle">vehicle(optional)</string>
    <string name="vehicle2">vehicle</string>



    <string name="Emirate_ID">ID photo</string>
    <string name="Driver_License">Driver License</string>
    <string name="any_assis">If you need any assistance, feel free to contact us:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Insurance_Type">Insurance Type</string>
    <string name="You_have_2_comparison">You have</string>
    <string name="You_have_2_comparison1">comparison</string>
    <string name="Motor_Insurance">Motor Insurance</string>
    <string name="Health_Insurance">Health Insurance</string>
    <string name="Life_Insurance">Life Insurance</string>
    <string name="Travel_Insurance">Travel Insurance</string>
    <string name="Trucks">Trucks</string>
    <string name="Settings">Settings</string>
    <string name="Language">Language</string>
    <string name="Login">Login</string>
    <string name="SendBtn">Send</string>
    <string name="EnterMobile">Enter Mobile Number To send Password</string>


    <string name="CommingSoon">Comming Soon ...</string>
    <string name="TermsC">Terms &amp; Condition</string>
    <string name="required">required</string>


    <string name="Selectx">Select</string>
    <string name="yes">yes</string>
    <string name="No">No</string>
    <string name="AreYouwantChangeLangouage">Are You want Change Langouage?</string>

    <string name="Gender">Gender</string>
    <string name="Are_you_pregnant">Are you pregnant</string>
    <string name="has_you_insurance">has your insurance policy expired (yes)</string>
    <string name="chronic">do you have any chronic or pre-existing conditions ? (no)</string>


    <string name="selectGender">select Gender</string>
    <string name="Male">Male</string>
    <string name="female">female</string>
    <string name="Passport">Passport</string>
    <string name="visaPage">visa(optional)</string>
    <string name="AED">AED</string>
    <string name="All_the_details">All the details</string>
    <string name="Maintenance">Maintenance</string>
    <string name="TakeImage">Take Image</string>
    <string name="selectCar">select Type Car</string>


    <string name="aaa1">my car</string>
    <string name="aaa2">Used Car</string>
    <string name="aaa3">New Car</string>

    <string name="aabx">Select Choice</string>

    <string name="aab1">comprehensive</string>
    <string name="aab2">against others</string>

    <string name="aac1">Valid insurance</string>
    <string name="aac2">Expired insurance</string>

    <string name="aav1">Yes</string>
    <string name="aav2">No</string>


    <string name="aavxx">Registry</string>
    <string name="aavxxxxx">Is the car mortgaged? </string>
    <string name="aavxxxxx1">The name of the mortgaged bank</string>
    <string name="ax">place of registration</string>
    <string name="ax23">Where to deliver the insurance documents</string>


    <string name="aec">vehicle inspection on the same day</string>
    <string name="aec1">Customs vehicle registration or possession certificate</string>
    <string name="aec2">vehicle License</string>
    <string name="other_photo">other photo</string>


    <string name="frontImage">front Image</string>
    <string name="back_image">back Image</string>
    <string name="right_side">right side</string>
    <string name="left_side">left side</string>
    <string name="car_img">vehicle image</string>
    <string name="Verify_your_order">Verify your Order</string>


    <string name="Expires_in">Expires in</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="finish">finish</string>
    <string name="car_price">car price</string>
    <string name="repair_price">repair amount</string>
    <string name="endurance_value">Excess Amount</string>
    <string name="Total_price">Total price</string>
    <string name="Checkout">Checkout</string>
    <string name="No_Data_Found">No Data Found</string>
    <string name="Motor">Motor</string>
    <string name="Health">Health</string>
    <string name="more_Det">More Details</string>
    <string name="Logout">Logout</string>
    <string name="Select">Select</string>
    <string name="AreYouwantChangeLlogout">Are You want to Logout Application?</string>


    <string name="asd1">insurco</string>
    <string name="asd2">Insure your vehicle in a few minutes?</string>
    <string name="asd3">Your health insurance has become easier?</string>


    <string name="asd11">Compare and buy your health insurance from the best health insurance companies in the UAE. We offer you the best offers ... Get the best health insurance policy for you and your family members.</string>
    <string name="asd22">Get protection wherever you go with vehicle insurance, get comprehensive coverage or against others... Buy vehicle insurance from Anchoroco at the lowest prices and within a few minutes!</string>
    <string name="asd33">Insurco more than 20 insurance companies in one place Enter your details.... compare offers.... pay and receive your policy.... Insurco... simpler than that</string>


    <string name="select">Select</string>
    <string name="AbuDhabi">Abu Dhabi</string>
    <string name="Ajman">Ajman</string>
    <string name="Dubai">Dubai</string>
    <string name="Fujairah">Fujairah</string>
    <string name="DocumentDocument">Document delivery destination</string>

    <string name="title_comparison">comparison</string>
    <string name="permission_required">permission_required</string>
    <string name="permission_message">permission_message</string>
    <string name="permission_warning">permission_warning</string>




    <string name="required2">Please include at least one photo in the vehicle photos or vehicle inspection</string>

</resources>

