<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Main.Fragments.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_lang"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/Settings"
            android:textColor="@color/purple_200"
            android:textSize="16dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/faqs"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/FAQS"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/ContactUs"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/terms_cond"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Language"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/oreder_compagtim"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Order_comparison"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Login"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:visibility="gone"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"

            android:background="@drawable/back_edit"
            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Logout"


            android:textColor="@color/purple_200"
            android:textSize="13dp"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>