<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back_lang"

    android:layout_height="match_parent"
    tools:context=".ui.Auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/top"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"

                    android:src="@drawable/ic_close" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="13dp"
                    android:src="@drawable/logo_w"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Register"
                android:textColor="@color/purple_200"
                android:textSize="16dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:background="@drawable/back_edit"
                android:hint="@string/Name"
                android:inputType="text"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:gravity="center"
                android:background="@drawable/back_edit"
                android:paddingStart="10dp"

                android:paddingEnd="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/emirate_flag"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+971"
                    android:paddingStart="5dp"
                    android:textColor="#0C99E7"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@android:color/transparent"

                    android:hint="@string/Phone_number"
                    android:inputType="number"
                    android:paddingStart="10dp"

                    android:paddingEnd="10dp"
                    android:textSize="13dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/back_edit"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/back_edit"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="13dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <CheckBox
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Accept_the"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/terms_cond"
                    android:textColor="@color/purple_200"
                    android:textSize="14dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:gravity="center">
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

                <LinearLayout
                    android:id="@+id/regester"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_login"
                    android:gravity="center"

                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        android:text="@string/Register"

                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle"
                        android:padding="6dp"
                        android:src="@drawable/next_icon" />

                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/You_have_an_account"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/Log_in"
                    android:textColor="@color/purple_200"
                    android:textSize="13dp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>