<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SelectLanguageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_lang"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_lang"
            android:layout_marginBottom="50dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_login"
                android:gravity="center"
                android:text="@string/English"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_w"
                android:gravity="center"
                android:text="@string/Arabic"
                android:textColor="@color/purple_200"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Turki"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_w"
                android:gravity="center"

                android:text="@string/Turki"
                android:textColor="@color/purple_200"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>