<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_lang"

    tools:context=".ui.Order.OrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/top"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"

                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="13dp"
                    android:src="@drawable/logo_w"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Order_comparison"
                android:textColor="@color/purple_200"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titlemotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Motor"
                android:textColor="@color/purple_200"
                android:textSize="16dp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_ordermotor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Health"
                android:textColor="@color/purple_200"
                android:textSize="16dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_orderhealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/no_data"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14dp"
                android:visibility="gone"
                android:text="@string/No_Data_Found"
                android:layout_height="match_parent"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>