<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back_lang"

    android:layout_height="match_parent"
    tools:context=".ui.Auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/top"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"

                    android:src="@drawable/ic_close" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="13dp"
                    android:src="@drawable/logo_w"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Forget_password"
                android:textColor="@color/purple_200"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/EnterMobile"
                android:textColor="@color/purple_200"
                android:textSize="14dp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:background="@drawable/back_edit"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="13dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/sumbit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_login"
                    android:gravity="center"

                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        android:text="@string/SendBtn"

                        android:textColor="@color/white"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle"
                        android:padding="6dp"
                        android:src="@drawable/next_icon" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>